--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <section id="main_content">
           <h3>An example!</h3>
-          <div><ng-view></ng-view></div>
+          <div id="main"><ng-view></ng-view></div>
         </section>
 
         <footer>
